Services, Report, Career and Rest page

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                                 </div>
 
                                 <div class="slider-hero-controls">
-                                    <div class="slider-hero-controls__dots"></div>
+                                    <div class="slider-hero-controls__dots slider-controls__dots"></div>
                                     <div class="slider-hero-controls__arrows slider-arrows">
                                         <button
                                             type="button"
