--- a/src/report.html
+++ b/src/report.html
@@ -12,33 +12,33 @@
                         <img src="@img/icons/pdf.svg" alt="pdf">
                         <p>Cod de guvernare corporativă al salariațiilor</p>
                     </a>
-                    <div class="report-tabs tabs">
+                    <div class="report-tabs tabs" data-tabs-group="Rapoarte financiare prezentate la CNPF">
                         <h1 class="tabs__title">Rapoarte financiare prezentate la CNPF</h1>
                         <ul class="tabs__list">
                             <li class="tabs__item">
                                 <button class="tabs__button button button__filter button__filter--docs tabs__button--active" data-tabs-path="tab-2022">2022</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2021">2021</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2021">2021</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2020">2020</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2020">2020</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2019">2019</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2019">2019</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2018">2018</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2018">2018</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2017">2017</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2017">2017</button>
                             </li>
                             <li class="tabs__item">
-                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-path="tab-2016">2016</button>
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-path="tab-2016">2016</button>
                             </li>
                         </ul>
                     
-                        <div class="tabs__content tabs__content--active" data-tabs-target="tab-2022">
+                        <div class="tabs__content tabs__content--active" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2022">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
@@ -48,7 +48,7 @@
                                 <p>Raportul semestrial august 2022</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2021">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2021">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
@@ -58,31 +58,108 @@
                                 <p>Adunarea generală ordinară a acționarilor</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2020">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2020">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2019">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2019">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2018">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2018">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2017">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2017">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
                             </a>
                         </div>
-                        <div class="tabs__content" data-tabs-target="tab-2016">
+                        <div class="tabs__content" data-tabs-group="Rapoarte financiare prezentate la CNPF" data-tabs-target="tab-2016">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="report-tabs tabs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn">
+                        <h1 class="tabs__title">Informație despre Adunările Generale ale Acționarilor</h1>
+                        <ul class="tabs__list">
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs tabs__button--active" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2022">2022</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2021">2021</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2020">2020</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2019">2019</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2018">2018</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2017">2017</button>
+                            </li>
+                            <li class="tabs__item">
+                                <button class="tabs__button button button__filter button__filter--docs" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-path="tab-2016">2016</button>
+                            </li>
+                        </ul>
+                    
+                        <div class="tabs__content tabs__content--active" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2022">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                            <a href="#" download class="document">
+                                <img src="@img/icons/docx.svg" alt="pdf">
+                                <p>Raportul semestrial august 2022</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2021">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Adunarea generală ordinară a acționarilor</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2020">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2019">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2018">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2017">
+                            <a href="#" download class="document">
+                                <img src="@img/icons/pdf.svg" alt="pdf">
+                                <p>Cod de guvernare corporativă al salariațiilor</p>
+                            </a>
+                        </div>
+                        <div class="tabs__content" data-tabs-group="Informație despre Adunările Generale ale Acționariloruyarn" data-tabs-target="tab-2016">
                             <a href="#" download class="document">
                                 <img src="@img/icons/pdf.svg" alt="pdf">
                                 <p>Cod de guvernare corporativă al salariațiilor</p>
