--- a/src/shop.html
+++ b/src/shop.html
@@ -270,6 +270,8 @@
                         @@include('./components/pagination.html')
                     </div>
                 </section>
+                @@include('./components/product-modal.html')
+                <div class="overlay"></div>
             </main>
             @@include('./components/footer.html')
         </div>
