--- a/src/structura.html
+++ b/src/structura.html
@@ -60,6 +60,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="overlay active"></div>
+                @@include('./components/structura-modal.html')
             </main>
             @@include('./components/footer.html')
         </div>
