--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,46 @@
                         <div class="hero-slider__body">
                             <div class="hero-slider__slider">
                                 <div class="slider-hero__body swiper">
-                                    <div class="slider-hero__slide" style="background: url('@img/hero.jpg') 50% 50% / cover no-repeat;"></div>
-                                    <div class="slider-hero__slide" style="background: url('@img/about.jpg') 50% 50% / cover no-repeat;"></div>
-                                    <div class="slider-hero__slide" style="background: url('@img/category-bg1.jpg') 50% 50% / cover no-repeat;"></div>
+                                    <div
+                                        class="slider-hero__slide"
+                                        style="
+                                            background: url('@img/hero.jpg') 50% 50% / cover
+                                                no-repeat;
+                                        "
+                                    ></div>
+                                    <div
+                                        class="slider-hero__slide"
+                                        style="
+                                            background: url('@img/about.jpg') 50% 50% / cover
+                                                no-repeat;
+                                        "
+                                    ></div>
+                                    <div
+                                        class="slider-hero__slide"
+                                        style="
+                                            background: url('@img/category-bg1.jpg') 50% 50% / cover
+                                                no-repeat;
+                                        "
+                                    ></div>
                                 </div>
 
                                 <div class="slider-hero-controls">
-                                    <div class="slider-hero-controls__dots slider-controls__dots"></div>
+                                    <div
+                                        class="slider-hero-controls__dots slider-controls__dots"
+                                    ></div>
                                     <div class="slider-hero-controls__arrows slider-arrows">
                                         <button
                                             type="button"
                                             class="slider-arrow slider-arrow__prev"
-                                        ><i class="mdi mdi-chevron-left"></i></button>
+                                        >
+                                            <i class="mdi mdi-chevron-left"></i>
+                                        </button>
                                         <button
                                             type="button"
                                             class="slider-arrow slider-arrow__next"
-                                        ><i class="mdi mdi-chevron-right"></i></button>
+                                        >
+                                            <i class="mdi mdi-chevron-right"></i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +87,13 @@
                 <section class="main-categories">
                     <div class="main-categories__container">
                         <div class="main-categories__grid">
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg1.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg1.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Produse de panificație</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Pâini și franzele</a>
@@ -73,11 +103,19 @@
                                     <a class="button button__chip" href="#">Rulade de cozonac</a>
                                     <a class="button button__chip" href="#">Foitaje</a>
                                     <a class="button button__chip" href="#">Pesmeți</a>
-                                    <a class="button button__chip" href="#">Produse de covrigarie</a>
+                                    <a class="button button__chip" href="#"
+                                        >Produse de covrigarie</a
+                                    >
                                     <a class="button button__chip" href="#">Aluant congelat</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg2.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg2.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Produse de patiserie</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Biscuiți</a>
@@ -87,7 +125,13 @@
                                     <a class="button button__chip" href="#">Gogoși</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg3.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg3.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Produse de cofetărie</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Torturi</a>
@@ -96,7 +140,13 @@
                                     <a class="button button__chip" href="#">Produse din vafe</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg4.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg4.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Bomboane și zefir</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Bomboane</a>
@@ -104,7 +154,13 @@
                                     <a class="button button__chip" href="#">Drajeuri</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg5.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg5.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Produse la comandă</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Pentru nuntă</a>
@@ -114,13 +170,25 @@
                                     <a class="button button__chip" href="#">Torturi corporative</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg6.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg6.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Paste făinoase</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">Paste făinoase</a>
                                 </div>
                             </div>
-                            <div class="main-categories__item categories-item" style="background: url('@img/category-bg7.jpg') 50% 50% / cover no-repeat;">
+                            <div
+                                class="main-categories__item categories-item"
+                                style="
+                                    background: url('@img/category-bg7.jpg') 50% 50% / cover
+                                        no-repeat;
+                                "
+                            >
                                 <h3>Produse de sărbători</h3>
                                 <div class="categories-item__list">
                                     <a class="button button__chip" href="#">De Paști</a>
@@ -135,6 +203,15 @@
             @@include('./components/footer.html')
         </div>
 
+        <ul class="woocommerce-info" role="alert">
+            <li>Cuponul „sadg” nu există! <a href="">LOOOL</a></li>
+        </ul>
+        <ul class="woocommerce-error" role="alert">
+            <li>Cuponul „sadg” nu există!</li>
+        </ul>
+        <ul class="woocommerce-message" role="alert">
+            <li>Cuponul „sadg” nu există!</li>
+        </ul>
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
         <script src="js/app.min.js"></script>
     </body>
