--- a/src/shop.html
+++ b/src/shop.html
@@ -33,6 +33,7 @@
                                         ),
                                         url(@img/product.jpeg);
                                 "
+                                data-id="1"
                             >
                                 <div class="product__meta product-meta">
                                     <div class="product-meta__name">
@@ -50,6 +51,8 @@
                                     </div>
                                 </div>
                             </div>
+                            @@include('./components/product-modal.html', {'id': '1'})
+
                             <div
                                 class="product"
                                 style="
@@ -60,6 +63,7 @@
                                         ),
                                         url(@img/product.jpeg);
                                 "
+                                data-id="2"
                             >
                                 <div class="product__meta product-meta">
                                     <div class="product-meta__name">
@@ -77,6 +81,7 @@
                                     </div>
                                 </div>
                             </div>
+                            @@include('./components/product-modal.html', {'id': '2'})
                             <div
                                 class="product"
                                 style="
@@ -87,6 +92,7 @@
                                         ),
                                         url(@img/product.jpeg);
                                 "
+                                data-id="3"
                             >
                                 <div class="product__meta product-meta">
                                     <div class="product-meta__name">
@@ -104,173 +110,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div
-                                class="product"
-                                style="
-                                    background: linear-gradient(
-                                            180deg,
-                                            rgba(0, 0, 0, 0) -13.62%,
-                                            rgba(0, 0, 0, 0.4) 100%
-                                        ),
-                                        url(@img/product.jpeg);
-                                "
-                            >
-                                <div class="product__meta product-meta">
-                                    <div class="product-meta__name">
-                                        Franzelă „Bran”cu tărâțe / <strong>15</strong> MDL
-                                    </div>
-                                    <div class="product-meta__controls">
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-minus"></i>
-                                        </button>
-                                        <input type="number" min="1" max="100" value="1" />
-                                        <button class="button button__icon button__icon--blured">
-                                            <i class="mdi mdi-plus"></i>
-                                        </button>
-                                        <a class="button button__add" href="#">Adaugă în coș</a>
-                                    </div>
-                                </div>
-                            </div>
+                            @@include('./components/product-modal.html', {'id': '3'})
                         </div>
                         @@include('./components/pagination.html')
                     </div>
                 </section>
-                @@include('./components/product-modal.html')
                 <div class="overlay"></div>
             </main>
             @@include('./components/footer.html')
