--- a/src/rest.html
+++ b/src/rest.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./components/head.html', {'title': 'Franzeluța S.A. | Baza de odihnă'})
+
 <body>
-   <div class="wrapper">
-       @@include('./components/header.html')
-       <main>
+    <div class="wrapper">
+        @@include('./components/header.html')
+        <main>
             <section class="rest">
                 @@include('./components/page-navigation.html')
                 <div class="rest__intro" style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(@img/odihna.jpg) 50% 50% / cover no-repeat">
@@ -27,7 +28,7 @@
                                                 <img src="@img/thumbnail.jpg" alt="">
                                             </div>
                                         </div>
-                            
+
                                         <div class="slider-rest-controls">
                                             <div class="slider-rest-controls__dots slider-controls__dots"></div>
                                             <div class="slider-rest-controls__arrows slider-arrows">
@@ -44,51 +45,151 @@
                             </div>
                         </div>
                         <aside class="rest__aside">
-                            <h3>Contacte</h3>
-                            <div class="aside-contact">
-                                <a href="tel:+373 22 41-61-65">
-                                    <strong>Telefon:</strong>
-                                    +373 22 41-61-65
-                                </a>
-                                <a href="tel:+373 69 21-30-98">
-                                    <strong>GSM:</strong>
-                                    +373 69 21-30-98
-                                </a>
-                                <p>
-                                    <strong>Orele de serviciu:</strong>
-                                    09:00-17:00
-                                </p>
-                            </div>
-                            <h3>Facilităţi în camere:
-                                Căsuţe şi blocuri cu 2 etaje</h3>
-                            <ul>
-                                <li>
-                                    Grup sanitar (VC/duş)
-                                </li>
-                                <li>
-                                    Boiler
-                                </li>
-                                <li>
-                                    Sufragerie
-                                </li>
-                                <li>
-                                    Frigider
-                                </li>
-                                <li>
-                                    Fierbător de apă
-                                </li>
-                                <li>
-                                    TV prin cablu
-                                </li>
-                            </ul>
+                            <section id="block-3" class="widget widget_block">
+                                <h3 class="wp-block-heading">Contacte</h3>
+                            </section>
+                            <section id="block-4" class="widget widget_block widget_text">
+                                <p><strong>Telefon:</strong> <a href="tel:+37322416165">+373 22 41-61-65</a></p>
+                            </section>
+                            <section id="block-6" class="widget widget_block widget_text">
+                                <p><strong>GSM:</strong> <a href="tel:+37369213098">+373 69 21-30-98</a></p>
+                            </section>
+                            <section id="block-7" class="widget widget_block widget_text">
+                                <p><strong>Orele de serviciu:</strong> 09:00-17:00</p>
+                            </section>
+                            <section id="block-8" class="widget widget_block">
+                                <h3 class="wp-block-heading">Facilităţi în camere: <br>Căsuţe şi blocuri cu 2 etaje</h3>
+                            </section>
+                            <section id="block-9" class="widget widget_block">
+                                <ul>
+                                    <li>Grup sanitar (VC/duş)</li>
+
+
+
+                                    <li>Boiler</li>
+
+
+
+                                    <li>Sufragerie</li>
+
+
+
+                                    <li>Frigider</li>
+
+
+
+                                    <li>Fierbător de apă</li>
+
+
+
+                                    <li>TV prin cablu</li>
+                                </ul>
+                            </section>
+                            <section id="block-10" class="widget widget_block">
+                                <h3 class="wp-block-heading">Apartamente VIP:</h3>
+                            </section>
+                            <section id="block-11" class="widget widget_block">
+                                <ul>
+                                    <li>Grup sanitar individual (VC/duş/baie)</li>
+
+
+
+                                    <li>Jacuzzi</li>
+
+
+
+                                    <li>Boiler</li>
+
+
+
+                                    <li>Sufragerie şi bucătărie</li>
+
+
+
+                                    <li>Frigider</li>
+
+
+
+                                    <li>Fierbător de apă</li>
+
+
+
+                                    <li>Uscător de păr</li>
+
+
+
+                                    <li>TV prin cablu</li>
+
+
+
+                                    <li>Aer condiţionat</li>
+                                </ul>
+                            </section>
+                            <section id="block-12" class="widget widget_block">
+                                <h3 class="wp-block-heading">Facilităţi teritoriu:</h3>
+                            </section>
+                            <section id="block-13" class="widget widget_block">
+                                <ul>
+                                    <li>Bazin cu şezlonguri</li>
+
+
+
+                                    <li>Terase mici cu umbrelă şi iluminare electrică, pentru 6-8 persoane</li>
+
+
+
+                                    <li>Grătar</li>
+
+
+
+                                    <li>Scrânciob</li>
+
+
+
+                                    <li>Terasă deschisă</li>
+
+
+
+                                    <li>Terasă cu acoperiş</li>
+
+
+
+                                    <li>Cantină</li>
+
+
+
+                                    <li>Parcare</li>
+
+
+
+                                    <li>Saună cu lemne (pentru 12 pers.)</li>
+
+
+
+                                    <li>Masă pentru tenis</li>
+
+
+
+                                    <li>Biliard</li>
+
+
+
+                                    <li>Teren sportiv</li>
+
+
+
+                                    <li>Sală de conferinţe</li>
+                                </ul>
+                            </section>
                         </aside>
                     </div>
                 </div>
             </section>
-       </main>
-       @@include('./components/footer.html')
-   </div>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.7/swiper-bundle.min.js" integrity="sha512-WlN87oHzYKO5YOmINf1+pSkbt4gm+lOro4fiSTCjII4ykJe/ycHKIaa9b2l9OMkbqEA4NxwTXAGFjSXgqEh19w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-   <script src="js/app.min.js"></script>
+        </main>
+        @@include('./components/footer.html')
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.7/swiper-bundle.min.js" integrity="sha512-WlN87oHzYKO5YOmINf1+pSkbt4gm+lOro4fiSTCjII4ykJe/ycHKIaa9b2l9OMkbqEA4NxwTXAGFjSXgqEh19w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/app.min.js"></script>
 </body>
+
 </html>
