another lil fix

--- a/src/structura.html
+++ b/src/structura.html
@@ -41,7 +41,7 @@
                             <span> Comerțul de firmă </span>
                         </div>
                         @@include('./components/structura-modal.html', {'id': '5'})
-                        <div class="structure-grid__item structure-grid__item--cover" style="background-color: #f8f9fb">
+                        <div class="structure-grid__item structure-grid__item--cover" data-structure-item-id="6" style="background-color: #f8f9fb">
                             <span> Ateliere mecanice experimentale </span>
                         </div>
                     </div>
